# smart-water-openenv

./: Dockerfile  README.md  app.py  env.py  graders.py  inference.py  openenv.yaml  pyproject.toml  tasks.py
server/: app.py
