[project]
name = "smart-water-openenv"
version = "0.1.0"
description = "OpenEnv smart water environment"
dependencies = [
    "fastapi",
    "uvicorn",
    "requests",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:app"

[tool.openenv]
server = "server.app:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
